[package]
authors = ["The Tari Development Community"]
description = "A peer-to-peer messaging system"
edition = "2018"
homepage = "https://tari.com"
license = "BSD-3-Clause"
name = "tari_comms"
readme = "README.md"
repository = "https://github.com/tari-project/tari"
version = "0.1.0"
[build-dependencies]
[build-dependencies.tari_common]
path = "../common"
version = "^0.1"

[dependencies]
async-trait = "*"
bitflags = "1.0.4"
blake2 = "0.8.1"
cidr = "0.1.0"
clear_on_drop = "=0.2.4"
data-encoding = "2.2.0"
digest = "0.8.0"
lazy_static = "1.3.0"
lmdb-zero = "0.4.4"
pin-project = "0.4.17"
prost = "=0.6.1"
rand = "0.7.2"
serde = "1.0.90"
serde_derive = "1.0.90"
strum = "0.18"
strum_macros = "0.18"
thiserror = "1.0.19"
tower = "0.3.1"
yamux = "=0.4.7"

[dependencies.bytes]
features = ["serde"]
version = "0.5.x"

[dependencies.chrono]
features = ["serde"]
version = "0.4.6"

[dependencies.futures]
features = ["async-await"]
version = "^0.3"

[dependencies.log]
features = ["std"]
version = "0.4.0"

[dependencies.multiaddr]
package = "parity-multiaddr"
version = "=0.7.3"

[dependencies.nom]
default-features = false
features = ["std"]
version = "5.1.0"

[dependencies.snow]
features = ["default-resolver"]
version = "=0.6.2"

[dependencies.tari_crypto]
version = "^0.4"

[dependencies.tari_shutdown]
path = "../infrastructure/shutdown"
version = "^0.0"

[dependencies.tari_storage]
path = "../infrastructure/storage"
version = "^0.1"

[dependencies.tokio]
features = ["blocking", "time", "tcp", "dns", "sync", "stream", "signal"]
version = "~0.2.19"

[dependencies.tokio-util]
features = ["codec"]
version = "0.2.0"

[dev-dependencies]
env_logger = "0.7.0"
serde_json = "1.0.39"
tempfile = "3.1.0"
tokio-macros = "0.2.3"

[dev-dependencies.tari_test_utils]
path = "../infrastructure/test_utils"
version = "^0.0"

[features]
avx2 = ["tari_crypto/avx2"]
